examples/negative/parser_syntax/fn_named_fn.kai
# Negative fixture (#520 / parser): a `fn` declaration uses the
# reserved word `fn` as its name. Parser must reject with
# "expected function name".

fn fn() : Int = 0
